// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
{
  "default": undefined,
  "displayName": "Grantee",
  "docs": {},
  "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.GrantRead.parameter.Grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "type": {
    "formattingPattern": "%",
    "types": [
      {
        "displayName": "IGrantable",
        "fqn": "Amazon.CDK.AWS.IAM.IGrantable",
        "id": "@aws-cdk/aws-iam.IGrantable",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
  "variadic": false,
}
`;

exports[`csharp snapshot 2`] = `
" \`Grantee\`<sup>Required</sup> <a name="Grantee" id="@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee"></a>

- *Type:* Amazon.CDK.AWS.IAM.IGrantable

---
"
`;

exports[`csharp snapshot 3`] = `
" \`VariadicProps\`<sup>Required</sup> <a name="VariadicProps" id="my-construct-library.MyVariadicClass.Initializer.parameter.variadicProps"></a>

- *Type:* double

---
"
`;

exports[`csharp snapshot 4`] = `
" \`VariadicInput\`<sup>Required</sup> <a name="VariadicInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* double

---
"
`;

exports[`csharp snapshot 5`] = `
" \`StaticVariadicInput\`<sup>Required</sup> <a name="StaticVariadicInput" id="my-construct-library.MyVariadicClass.myStaticFunction.parameter.staticVariadicInput"></a>

- *Type:* double

---
"
`;

exports[`go snapshot 1`] = `
{
  "default": undefined,
  "displayName": "grantee",
  "docs": {},
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.AuthorizationToken.GrantRead.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "type": {
    "formattingPattern": "%",
    "types": [
      {
        "displayName": "IGrantable",
        "fqn": "github.com/aws/aws-cdk-go/awscdk/awsiam/awscdkawsiam.IGrantable",
        "id": "@aws-cdk/aws-iam.IGrantable",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
  "variadic": false,
}
`;

exports[`go snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name="grantee" id="@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee"></a>

- *Type:* github.com/aws/aws-cdk-go/awscdk/awsiam/awscdkawsiam.IGrantable

---
"
`;

exports[`go snapshot 3`] = `
" \`variadicProps\`<sup>Required</sup> <a name="variadicProps" id="my-construct-library.MyVariadicClass.Initializer.parameter.variadicProps"></a>

- *Type:* *f64

---
"
`;

exports[`go snapshot 4`] = `
" \`variadicInput\`<sup>Required</sup> <a name="variadicInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* *f64

---
"
`;

exports[`go snapshot 5`] = `
" \`staticVariadicInput\`<sup>Required</sup> <a name="staticVariadicInput" id="my-construct-library.MyVariadicClass.myStaticFunction.parameter.staticVariadicInput"></a>

- *Type:* *f64

---
"
`;

exports[`java snapshot 1`] = `
{
  "default": undefined,
  "displayName": "grantee",
  "docs": {},
  "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.grantRead.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "type": {
    "formattingPattern": "%",
    "types": [
      {
        "displayName": "IGrantable",
        "fqn": "software.amazon.awscdk.services.iam.IGrantable",
        "id": "@aws-cdk/aws-iam.IGrantable",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
  "variadic": false,
}
`;

exports[`java snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name="grantee" id="@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee"></a>

- *Type:* software.amazon.awscdk.services.iam.IGrantable

---
"
`;

exports[`java snapshot 3`] = `
" \`variadicProps\`<sup>Required</sup> <a name="variadicProps" id="my-construct-library.MyVariadicClass.Initializer.parameter.variadicProps"></a>

- *Type:* java.lang.Number

---
"
`;

exports[`java snapshot 4`] = `
" \`variadicInput\`<sup>Required</sup> <a name="variadicInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* java.lang.Number

---
"
`;

exports[`java snapshot 5`] = `
" \`staticVariadicInput\`<sup>Required</sup> <a name="staticVariadicInput" id="my-construct-library.MyVariadicClass.myStaticFunction.parameter.staticVariadicInput"></a>

- *Type:* java.lang.Number

---
"
`;

exports[`newlines in "defaults" are removed 1`] = `
" \`grantee\`<sup>Required</sup> <a name="grantee" id="@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee"></a>

- *Type:* @aws-cdk/aws-iam.IGrantable
- *Default:* default option with a newline

---
"
`;

exports[`python snapshot 1`] = `
{
  "default": undefined,
  "displayName": "grantee",
  "docs": {},
  "fqn": "aws_cdk.aws_ecr.AuthorizationToken.grant_read.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "type": {
    "formattingPattern": "%",
    "types": [
      {
        "displayName": "IGrantable",
        "fqn": "aws_cdk.aws_iam.IGrantable",
        "id": "@aws-cdk/aws-iam.IGrantable",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
  "variadic": false,
}
`;

exports[`python snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name="grantee" id="@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee"></a>

- *Type:* aws_cdk.aws_iam.IGrantable

---
"
`;

exports[`python snapshot 3`] = `
" \`variadic_props\`<sup>Required</sup> <a name="variadic_props" id="my-construct-library.MyVariadicClass.Initializer.parameter.variadicProps"></a>

- *Type:* typing.Union[int, float]

---
"
`;

exports[`python snapshot 4`] = `
" \`variadic_input\`<sup>Required</sup> <a name="variadic_input" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* typing.Union[int, float]

---
"
`;

exports[`python snapshot 5`] = `
" \`static_variadic_input\`<sup>Required</sup> <a name="static_variadic_input" id="my-construct-library.MyVariadicClass.myStaticFunction.parameter.staticVariadicInput"></a>

- *Type:* typing.Union[int, float]

---
"
`;

exports[`typescript snapshot 1`] = `
{
  "default": undefined,
  "displayName": "grantee",
  "docs": {},
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "type": {
    "formattingPattern": "%",
    "types": [
      {
        "displayName": "IGrantable",
        "fqn": "@aws-cdk/aws-iam.IGrantable",
        "id": "@aws-cdk/aws-iam.IGrantable",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
  "variadic": false,
}
`;

exports[`typescript snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name="grantee" id="@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee"></a>

- *Type:* @aws-cdk/aws-iam.IGrantable

---
"
`;

exports[`typescript snapshot 3`] = `
" \`variadicProps\`<sup>Required</sup> <a name="variadicProps" id="my-construct-library.MyVariadicClass.Initializer.parameter.variadicProps"></a>

- *Type:* number

---
"
`;

exports[`typescript snapshot 4`] = `
" \`variadicInput\`<sup>Required</sup> <a name="variadicInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* number

---
"
`;

exports[`typescript snapshot 5`] = `
" \`staticVariadicInput\`<sup>Required</sup> <a name="staticVariadicInput" id="my-construct-library.MyVariadicClass.myStaticFunction.parameter.staticVariadicInput"></a>

- *Type:* number

---
"
`;
